test/expressions/calls/CallParenlessWithParensParam.good
CallParenlessWithParensParam.chpl:3: In function 'test':
CallParenlessWithParensParam.chpl:4: error: unresolved access of 'int(64)' by '()'
